<resources>
    <string name="app_name">travelhack</string>
    <string name="scan_your_ticket_barcode">Scan your ticker barcode</string>
    <string name="english_short">ENG</string>
    <string name="china_short">中国</string>
    <string name="russia_short">РУС</string>
    <string name="back_btn_label">Назад</string>
    <string name="forward_btn_label">Далее</string>
    <string name="instructions_header">Создайте коллаж со своим фото. Распечатайте и пошлите на email.</string>
    <string name="instr_scan_your_ticket">Отсканируйте штрих-код со своего входного билета камерой планшета</string>
    <string name="instr_click_makephoto_btn">Нажмите на планшете кнопку «Сфотографировать»</string>
    <string name="instr_go_into_chromazone">Встаньте в зону фотографии (зелёный фон)</string>
    <string name="instr_ten_secs_before_shoot">Через 10 секунд камера сделает снимок</string>
    <string name="instr_you_got_six_shots">Можете сделать до 6 снимков по одному билету</string>
    <string name="instr_choose_background">Создайте коллажи</string>
    <string name="instr_print_liked_one">Понравившийся коллаж распечатайте и пошлите на email</string>
    <string name="barcode_hint_header">Поднесите штрих-код входного билета к задней камере планшета.</string>
    <string name="second">с</string>
    <string name="click_btn_and_go_shot">Нажмите на кнопку и пройдите в зону съёмки</string>
    <string name="exit">Выйти</string>
    <string name="your_photo_will_be_removed">Вы уверены? Билет будет аннулирован.</string>
    <string name="cancel">Отменить</string>
    <string name="do_another_shot">Сделать ещё снимок</string>
    <string name="navigate_to_edit">Перейти к редактированию</string>
    <string name="rus_start_screen">Чтобы сделать фото коснитесь экрана и поднесите штрих-код входного билета к задней камере планшета</string>
    <string name="eng_start_screen">To take a photo, tap the screen and bring the barcode of the entrance ticket to the back camera of the tablet</string>
    <string name="chin_start_screen">要拍照，請點按屏幕，然後將門票的條形碼帶到平板電腦的後置攝像頭</string>
    <string name="rus_tak_shoot">Нажмите на кнопку и пройдите в зону съёмки. \nСнимок будет сделан через 10 секунд после нажатия.</string>
    <string name="eng_takephoto">Press the button and go to the shooting area. The picture is taken 10 seconds after pressing.</string>
    <string name="go_get_photos_instr_rus">Предъявите билет со штрих-кодом сотруднику отдела «Сувениры» и получите фотографию.</string>
    <string name="go_get_photos_instr_eng">Show a ticket with a barcode to an employee of the Souvenirs department and get a photo.</string>
    <string name="go_get_photos_instr_chin">向紀念品部門的成員出示帶有條形碼的車票並獲得照片。</string>

    <string-array name="chroma_colours">
        <item>#14fc04</item>
        <item>#14fc0c</item>
        <item>#18fc04</item>
    </string-array>
</resources>
