<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/header"
        style="@style/text_header"
        android:text="@string/instructions_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingStart="161dp"
        android:paddingEnd="161dp"
        app:layout_constraintBottom_toTopOf="@id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView style="@style/unordered_list_circle" />

            <TextView
                style="@style/unordered_list_text"
                android:text="@string/instr_scan_your_ticket" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView style="@style/unordered_list_circle" />

            <TextView
                style="@style/unordered_list_text"
                android:text="@string/instr_click_makephoto_btn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView style="@style/unordered_list_circle" />

            <TextView
                style="@style/unordered_list_text"
                android:text="@string/instr_go_into_chromazone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView style="@style/unordered_list_circle" />

            <TextView
                style="@style/unordered_list_text"
                android:text="@string/instr_ten_secs_before_shoot" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/back_btn"
        style="@style/button_secondary_grey"
        android:text="@string/back_btn_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/forward_btn"
        style="@style/button_secondary_purple"
        android:text="@string/forward_btn_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>