<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_transparent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/dialog_drop_session_layout"
        android:layout_width="460dp"
        android:layout_height="210dp"
        android:background="@drawable/dialog_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/unordered_list_text"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:text="@string/your_photo_will_be_removed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/dlg_exit"
            android:layout_width="118dp"
            android:layout_height="48dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_red_background"
            android:paddingStart="32dp"
            android:paddingTop="13dp"
            android:paddingEnd="32dp"
            android:paddingBottom="13dp"
            android:text="@string/exit"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/dlg_cancel"
            android:layout_width="146dp"
            android:layout_height="48dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_white_grey_stroke_background"
            android:paddingStart="32dp"
            android:paddingTop="13dp"
            android:paddingEnd="32dp"
            android:paddingBottom="13dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toStartOf="@id/dlg_exit"
            app:layout_constraintTop_toTopOf="@id/dlg_exit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>