<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clickable_start_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="true"

    android:focusable="true"
    android:padding="32dp">

    <ImageView
        android:id="@+id/barcode_img"
        android:layout_width="136dp"
        android:layout_height="130dp"
        android:src="@drawable/barcode"
        app:layout_constraintBottom_toBottomOf="@+id/tablet_img"
        app:layout_constraintEnd_toEndOf="@id/tablet_img"
        app:layout_constraintStart_toStartOf="@id/tablet_img"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30000002" />

    <ImageView
        android:id="@+id/tablet_img"
        android:layout_width="434dp"
        android:layout_height="259dp"
        android:layout_marginEnd="72dp"
        android:src="@drawable/tablet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_panorama_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/first_divider"
        android:layout_width="64dp"
        android:layout_height="4dp"
        android:layout_marginTop="61dp"
        android:src="@drawable/ic_stick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/ru_instr"
        style="@style/text"
        android:layout_width="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="106dp"
        android:text="@string/rus_start_screen"
        app:layout_constraintEnd_toStartOf="@id/tablet_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_divider" />

    <ImageView
        android:id="@+id/second_divider"
        android:layout_width="64dp"
        android:layout_height="4dp"
        android:layout_marginTop="61dp"
        android:src="@drawable/ic_stick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ru_instr" />

    <TextView
        android:id="@+id/eng_instr"
        style="@style/text"
        android:layout_width="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="106dp"
        android:text="@string/eng_start_screen"
        app:layout_constraintEnd_toStartOf="@id/tablet_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/second_divider" />


    <ImageView
        android:id="@+id/third_divider"
        android:layout_width="64dp"
        android:layout_height="4dp"
        android:layout_marginTop="61dp"
        android:src="@drawable/ic_stick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eng_instr" />

    <TextView
        android:id="@+id/china_instr"
        style="@style/text"
        android:layout_width="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="106dp"
        android:text="@string/chin_start_screen"
        app:layout_constraintEnd_toStartOf="@id/tablet_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/third_divider" />


</androidx.constraintlayout.widget.ConstraintLayout>
