<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="352dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="32dp"
            android:src="@drawable/ic_panorama_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_first_step"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_marginEnd="16dp"
            android:src="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@id/img_second_step"
            app:layout_constraintEnd_toStartOf="@id/first_arrow"
            app:layout_constraintTop_toTopOf="@id/img_second_step" />

        <ImageView
            android:id="@+id/first_arrow"
            style="@style/arrow"
            app:layout_constraintBottom_toBottomOf="@id/img_second_step"
            app:layout_constraintEnd_toStartOf="@id/img_second_step"
            app:layout_constraintTop_toTopOf="@id/img_second_step" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_second_step"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:src="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/second_arrow"
            style="@style/arrow"
            app:layout_constraintBottom_toBottomOf="@id/img_second_step"
            app:layout_constraintStart_toEndOf="@id/img_second_step"
            app:layout_constraintTop_toTopOf="@id/img_second_step" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_third_step"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="@id/img_second_step"
            app:layout_constraintStart_toEndOf="@id/second_arrow"
            app:layout_constraintTop_toTopOf="@id/img_second_step" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="1280dp"
        android:layout_height="448dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/rus_btn"
            style="@style/button_primary"
            android:text="@string/russia_short"
            app:layout_constraintBottom_toBottomOf="@id/eng_btn"
            app:layout_constraintEnd_toStartOf="@id/eng_btn"
            app:layout_constraintTop_toTopOf="@id/eng_btn" />

        <Button
            android:id="@+id/eng_btn"
            style="@style/button_primary"
            android:text="@string/english_short"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/china_btn"
            style="@style/button_primary"
            android:text="@string/china_short"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/eng_btn"
            app:layout_constraintStart_toEndOf="@id/eng_btn"
            app:layout_constraintTop_toTopOf="@id/eng_btn" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>